<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panther_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo-classic simualiton configuration for Husarion Panther robot</description>
  <license>Apache License 2.0</license>

  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com</url>
  <url type="repository">https://github.com/husarion/panther_description/tree/ros2</url>
  <url type="bugtracker">https://github.com/husarion/panther_description/issues</url>

  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>hector_gazebo_plugins</depend>
  <depend>panther_description</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <depend condition="$ROS_DISTRO == foxy">joint_state_publisher</depend>
  <depend condition="$ROS_DISTRO == galactic">joint_state_broadcaster</depend>
  <depend condition="$ROS_DISTRO == humble">joint_state_broadcaster</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_plugin_path="lib"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds:${prefix}/media"/>
  </export>
</package>